--- a/Projects/Project_20210308/Project_20210308/Properties/Resources.resx
+++ b/Projects/Project_20210308/Project_20210308/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="add_graph_report_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\add_graph_report_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="search_property_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\search_property_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="delete_pie_chart_report_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\delete_pie_chart_report_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -136,7 +139,7 @@
   <data name="download_from_ftp_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\download_from_ftp_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="search_property_32px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\search_property_32px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="refund_50px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\refund_50px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
